--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -80,9 +80,6 @@
       Roboto, sans-serif;
   }
 
-  span {
-  }
-
   p,
   li,
   td,
@@ -214,4 +211,36 @@
   .span-content {
     @apply font-inter font-normal;
   }
+}
+
+::view-transition-old(root),
+::view-transition-new(root) {
+  animation: none;
+  mix-blend-mode: normal;
+}
+
+::view-transition-old(root) {
+  z-index: 1;
+}
+
+::view-transition-new(root) {
+  z-index: 9999;
+}
+
+@keyframes reveal-theme {
+  from {
+    clip-path: circle(0% at var(--x) var(--y));
+  }
+
+  to {
+    clip-path: circle(150% at var(--x) var(--y));
+  }
+}
+
+::view-transition-new(root) {
+  animation: 500ms cubic-bezier(0.4, 0, 0.2, 1) reveal-theme;
+}
+
+[data-theme-transition="true"] {
+  view-transition-name: root;
 }
