Allow modifying the nav order in manage content and correcting the error displaying published content in the modal.

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -270,3 +270,15 @@
 [data-theme-transition="true"] {
   view-transition-name: root;
 }
+@keyframes shimmer {
+  0% {
+    background-position: 200% 0;
+  }
+  100% {
+    background-position: -200% 0;
+  }
+}
+
+.animate-shimmer {
+  animation: shimmer 2s infinite linear;
+}
